Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6581

Cmake wizard dialog does not show "Finish" and "Cancel" buttons

XMLWordPrintable

      When I want to run a cmake on my project the dialog for running cmake does not show "Finish" and "Cancel" buttons. Same happens when opening CMakeLists.txt in Creator: "Next" button is not visible.

      2.4 RC is affected too.

      See the attached image.

      Workaround is to resize a dialog a bit and the buttons will show up.

        1. cmake-dialog.png
          15 kB
          Bojan Petrovic
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            element9 Bojan Petrovic
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes