Fix size of cmake project wizard

Task-Nr: QTCREATORBUG-6581

Change-Id: I391df32dc49a7ee7a34ba4b47bf02d1c1690647a
Reviewed-by: Daniel Molkentin <daniel.molkentin@nokia.com>